fixed trash can on mobile and almost fixed connections not updating on screen size change

--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,12 @@ html, body, .workspace {
     margin: 0%;
     background-color: black;
     overflow: hidden;
-    touch-action: none;
-
+    
     --black-1: rgb(35, 35, 35);
     --black-2: rgb(60, 60, 60);
     --gray: rgba(70, 70, 70);
     --white: rgb(204, 204, 204);
-
+    
     /* Gender colors */
     /* --agender-1 is --black-1 */
     /* --agender-2 is --black-2 */
@@ -23,12 +22,15 @@ html, body, .workspace {
     --female-2: rgb(255, 188, 253);
     --female-3: rgb(255, 50, 250);
 }
+* {
+    touch-action: none;
+}
 #workspace {
     width: 100%;
     height: 100%;
     overflow: visible;
     /* DEBUG */
-    border: 1px solid red;
+    /* border: 1px solid red; */
 
     --pos-x: 0;
     --pos-y: 0;
@@ -236,7 +238,7 @@ html, body, .workspace {
 #help-icon:hover {
     color: rgba(255, 255, 255, 0.4);
 }
-#help-icon:hover~#help-text, #help-text:hover #help-icon:active~#help-text, #help-text:active {
+#help-icon:hover~#help-text, #help-text:hover {
     visibility: visible;
     opacity: 1;
     pointer-events: auto;
@@ -245,6 +247,7 @@ html, body, .workspace {
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
+    touch-action: auto;
     transition: visibility 0.2s, opacity 0.2s;
     padding: 1em;
     width: 32em;
@@ -262,6 +265,9 @@ html, body, .workspace {
 #help-text h2, #help-text h3, #help-text p {
     margin: 0.2em 0;
 }
+#help-text * {
+    pointer-events: none;
+}
 
 #graph, .family, .parents, .children {
     display: flex;
@@ -269,7 +275,7 @@ html, body, .workspace {
     align-items: center;
     align-content: center;
     /* DEBUG */
-    border: 1px solid cyan;
+    /* border: 1px solid cyan; */
 }
 
 #graph {
